--- a/extensions/js/build.gradle
+++ b/extensions/js/build.gradle
@@ -2,4 +2,9 @@ dependencies {
     compile project(':doov-core')
     compile project(':doov-assertions')
     compile group: 'org.webjars', name: 'momentjs', version: '2.10.3'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitJupiterVersion
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitJupiterVersion
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitJupiterVersion
+    testCompile group: 'org.assertj', name: 'assertj-core', version: assertjVersion
+    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: junitPlatformLauncherVersion
 }
