--- a/extensions/js/build.gradle
+++ b/extensions/js/build.gradle
@@ -3,6 +3,11 @@ ext.pomProjectName = 'dOOv JavaScript Extension'
 dependencies {
     compile project(':doov-core')
     compile group: 'org.webjars', name: 'momentjs', version: '2.10.3'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitJupiterVersion
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: junitJupiterVersion
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitJupiterVersion
+    testCompile group: 'org.assertj', name: 'assertj-core', version: assertjVersion
+    testCompile group: 'org.junit.platform', name: 'junit-platform-launcher', version: junitPlatformLauncherVersion
 }
 
 if (isReleaseVersion) {
